Make boids responsive to page size, improve bounding to prevent boids from going out of bounds

--- a/css/styles.css
+++ b/css/styles.css
@@ -510,6 +510,11 @@ footer {
 }
 
 .boids {
+	height: 2vh;
+	width: 2vh;
+	min-width: 10px;
+	min-height: 10px;
 	position: absolute;
+	overflow: hidden;
 	will-change: transform;
 }
